# PUBG

./: CMakeLists.txt  Makefile  README.md  run.sh
mesh/edits/: drone.blend  gun.blend  sign.blend  skydome.blend  tree.blend  tree.blend1
png/edits/: blades.xcf  bullet-icon.xcf  flame.xcf  muzzle-flash.xcf  no-drones.xcf  quadcopter.xcf  reticle.xcf  smoke.xcf  tree.xcf  world.xcf
shaders/: grass.frag  grass.vert  particle.frag  particle.vert  plane.frag  plane.vert  sky.frag  sky.vert  solid-instanced.vert  solid.frag  solid.vert  terrain.frag  terrain.vert  text.frag  text.vert  tree.frag  tree.vert
src/: aabbcollider.cpp  box.cpp  box_bld.cpp  complexcollider.cpp  complexcollider.h  cylindercollider.cpp  drone.cpp  drone.h  dronemanager.cpp  dronemanager.h  gldebugging.cpp  grassmanager.cpp  grassmanager.h  hud.cpp  hud.h  image.cpp  loadtexture.cpp  main.cpp  math.cpp  math.h  object.cpp  object.h  particle.cpp  particlelist.cpp  particlemanager.cpp  particlemanager.h  planerenderer.cpp  planerenderer.h  player.cpp  profiling.cpp  shader.cpp  shader.h  sign.cpp  sign.h  sky.cpp  sky.h  soundmanager.cpp  soundmanager.h  sysdep.cpp  sysdep.h  (+7 more)
src/audio/: soundmanager.cpp
src/objects/: aabbcollider.cpp  aabbcollider.h  complexcollider.cpp  complexcollider.h  cylindercollider.cpp  cylindercollider.h  drone.cpp  drone.h  dronemanager.cpp  dronemanager.h  hud.cpp  hud.h  object.cpp  player.cpp  player.h  sign.cpp  sign.h  tree.h  treemanager.cpp  treemanager.h
src/particles/: particle.cpp  particle.h  particleconfig.cpp  particlelist.cpp  particlelist.h  particlemanager.cpp
src/util/: gldebugging.cpp  gldebugging.h  image.cpp  image.h  loadtexture.cpp  loadtexture.h  math.cpp  math.h  planerenderer.cpp  planerenderer.h  profiling.cpp  profiling.h  shader.cpp  shader.h  text.cpp  text.h
src/world/: grassmanager.cpp  grassmanager.h  sky.cpp  sky.h  terrain.cpp  terrain.h  world.cpp  world.h
